# fire-oracle

./: .gitignore  README.md  pyproject.toml
css/: about.css  form.css  home.css  map.css  navbar.css  signup.css
exacalidraw/: DOM-Diagram_and_JavaScript-Flowcharts.excalidraw
html/: about.html  home.html  index.html  interactive_map.html  login.html  map.html  navbar.html  news.html  settings.html  signup.html
js/: animate.js  load-navbar.js  login.js  signup.js
python/models/: one_hot_encoder.pkl  target_encoder_location.pkl  target_encoder_size.pkl
python/notebooks/: map.html  mapping-predictions.ipynb  model-training.ipynb  model-training_v2.ipynb  preprocessing-dataset.ipynb  preprocessing.ipynb
python/scripts/: convert-fires-table-to-df.py  view-sqlite.py
