[tool.poetry]
name = "cis182-cw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.1"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
reverse-geocoder = "^1.5.1"
category-encoders = "^2.6.3"
pandas = "^2.1.2"
xgboost = "^2.0.1"
ipykernel = "^6.26.0"
geocoder = "^1.38.1"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
parquet = "^1.3.1"
dask = "^2024.5.1"
dask-expr = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
